--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 build-backend = "setuptools.build_meta"
 requires = [
     "setuptools>=61.0",
-    "sympy>=1.11.1"
+    "sympy>=1.11.1",
+    "mpmath>=1.2.1"
 ]
 
 [project]
