--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,10 @@ jobs:
       - run:
           name: Testing S Compiler/Interpreter
           command: echo Here Be Pytest
+      - persist_to_workspace:
+          root: ~/project
+          paths:
+            - dist
 
   deploy:
     executor: python/default
