Fixed to upload to testpypi

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           at: ~/project
       - python/install-packages:
           pkg-manager: pip
-      - run: pip install twine && twine upload dist/*
+      - run: pip install twine && twine upload --repository testpypi dist/*
 
 workflows:
   test_my_app:
