--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
 [build-system]
-build-backend = "setuptools.build_meta"
 requires = [
-    "setuptools>=61.0",
+    'flit_core>=3.2,<4',
     "sympy>=1.11.1",
     "mpmath>=1.2.1"
 ]
+build-backend = 'flit_core.buildapi'
 
 [project]
 name = "s_interpreter"
-version = "0.0.1"
+dynamic = ['version']
 authors = [
   { name="Muli Silman", email="mulisilman@gmail.com" },
 ]
 description = "A package for compiling and interpreting S Language code"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
