--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
 requires = [
-    'flit_core>=3.2,<4',
+    "setuptools>=61.0",
     "sympy>=1.11.1",
     "mpmath>=1.2.1"
 ]
-build-backend = 'flit_core.buildapi'
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "s_interpreter"
-dynamic = ['version']
+version="0.0.1"
 authors = [
   { name="Muli Silman", email="mulisilman@gmail.com" },
 ]
@@ -26,5 +26,5 @@ classifiers = [
 "Bug Tracker" = "https://github.com/SamuelSill/s_interpreter/issues"
 
 [project.scripts]
-s_compiler = "compiler:main"
-s_interpreter = "interpreter:main"
+s_compiler = "s_interpreter.compiler:main"
+s_interpreter = "s_interpreter.interpreter:main"
