--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
           command: pip install twine && twine upload --skip-existing dist/*
 
 workflows:
-  test_my_app:
+  ci:
     jobs:
       - build
       - test:
@@ -53,6 +53,6 @@ workflows:
       - deploy:
           requires:
             - test
-#          filters:
-#            branches:
-#              only: master
+          filters:
+            branches:
+              only: master
