--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,7 @@ build-backend = "setuptools.build_meta"
 name = "s_interpreter"
 version="0.0.3"
 dependencies = [
-    "sympy>=1.11.1",
-    "mpmath>=1.2.1"
+    "sympy>=1.11.1"
 ]
 authors = [
   { name="Muli Silman", email="mulisilman@gmail.com" },
