Added build to workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
             - dist
             - requirements.txt
             - tests
+            - build
             - pyproject.toml
   test:
     docker:
